# snake

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/inc/: snake.cpp  snake.h
